compiler/testData/diagnostics/tests/exposed/implictlyExposed.diag.txt
/implictlyExposed.kt:13:5: error: 'public' function exposes its 'local' return type argument <no name provided>
fun other() = public(object : Inter {})
    ^^^^^
